--- a/gradle/ci-profile.gradle
+++ b/gradle/ci-profile.gradle
@@ -2,6 +2,7 @@ apply plugin: 'org.ajoberstar.github-pages'
 
 ext {
   assetsRepoBranchName = 'master'
+  assetsRepoCommit = "origin/$assetsRepoBranchName"
   builderMaxHeapSize = '6g'
   publishMessage = project.hasProperty('buildTag') ? project.property('buildTag') : 'publish changes'
   publishRepoBranchName = 'master'
